[package]
name = "graphicsmagick-examples"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
graphicsmagick = { version = "0.1.0", path = "../graphicsmagick" }
