[package]
name = "graphicsmagick-examples"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.68"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
graphicsmagick = { version = "0.6.0", path = "../graphicsmagick" }
