[package]
name = "graphicsmagick-sys"
version = "0.6.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.68"
license = "MIT"
description = "GraphicsMagick binding for Rust."
readme = "README.md"
repository = "https://github.com/jmjoy/graphicsmagick-rs"
keywords = ["image", "binding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = []

[dependencies]

[build-dependencies]
anyhow = "1.0.53"
bindgen = { version = "0.66.0", features = ["runtime", "which-rustfmt"], default-features = false }
