[package]
name = "graphicsmagick-sys"
version = "0.6.1"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "GraphicsMagick binding for Rust."
readme = "README.md"
repository = "https://github.com/jmjoy/graphicsmagick-rs"
keywords = ["image", "binding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = []

[dependencies]

[build-dependencies]
anyhow = "1.0.53"
bindgen = { version = "0.72.0", features = ["runtime"], default-features = false }
