[package]
name = "graphicsmagick"
version = "0.2.2"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
description = "GraphicsMagick binding for Rust."
readme = "README.md"
repository = "https://github.com/jmjoy/graphicsmagick-rs"
keywords = ["image", "binding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = ["graphicsmagick-sys/static"]

[dependencies]
graphicsmagick-sys = { version = "0.1.2", path = "../graphicsmagick-sys" }
libc = "0.2.117"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"

[build-dependencies]
anyhow = "1.0.53"
graphicsmagick-sys = { version = "0.1.2", path = "../graphicsmagick-sys" }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
