[package]
name = "graphicsmagick"
version = "0.6.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.68"
license = "MIT"
description = "GraphicsMagick binding for Rust."
readme = "README.md"
repository = "https://github.com/jmjoy/graphicsmagick-rs"
keywords = ["image", "magick", "gmagick", "imagemagick", "imagick"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = ["graphicsmagick-sys/static"]

# Version features.
v1_3_20 = []
v1_3_21 = ["v1_3_20"]
v1_3_22 = ["v1_3_21"]
v1_3_23 = ["v1_3_22"]
v1_3_24 = ["v1_3_23"]
v1_3_25 = ["v1_3_24"]
v1_3_26 = ["v1_3_25"]
v1_3_27 = ["v1_3_26"]
v1_3_28 = ["v1_3_27"]
v1_3_29 = ["v1_3_28"]
v1_3_30 = ["v1_3_29"]
v1_3_31 = ["v1_3_30"]
v1_3_32 = ["v1_3_31"]
v1_3_33 = ["v1_3_32"]
v1_3_34 = ["v1_3_33"]
v1_3_35 = ["v1_3_34"]
v1_3_36 = ["v1_3_35"]
v1_3_37 = ["v1_3_36"]
v1_3_38 = ["v1_3_37"]

[dependencies]
graphicsmagick-sys = { version = "0.6.0", path = "../graphicsmagick-sys" }
thiserror = "1.0.30"
num_enum = "0.6.0"
null-terminated-str = "0.1.2"

[dev-dependencies]
anyhow = "1.0.53"
env_logger = "0.10.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
